syntax = "proto3";

package interpreter.widgets;

import "types.proto";
import "handlers.proto";

// Base Widget message with oneof for polymorphism
message Widget {
  string type = 1;
  oneof widget_data {
    Scaffold scaffold = 2;
    AppBar app_bar = 3;
    Body body = 4;
    Text text = 5;
    TextFromState text_from_state = 6;
    Button button = 7;
    Row row = 8;
    Column column = 9;
    ElevatedButton elevated_button = 10;
    Container container = 11;
    Padding padding = 12;
    Center center = 13;
    ListView list_view = 14;
    GridView grid_view = 15;
    Card card = 16;
    FloatingActionButton floating_action_button = 17;
    TextField text_field = 18;
    Image image = 19;
    Icon icon = 20;
    Divider divider = 21;
    SizedBox sized_box = 22;
    Expanded expanded = 23;
    Flexible flexible = 24;
    Stack stack = 25;
    Positioned positioned = 26;
    Wrap wrap = 27;
    Chip chip = 28;
    Switch switch = 29;
    Checkbox checkbox = 30;
    Radio radio = 31;
    Slider slider = 32;
    LinearProgressIndicator linear_progress_indicator = 33;
    CircularProgressIndicator circular_progress_indicator = 34;
    AlertDialog alert_dialog = 35;
    BottomSheet bottom_sheet = 36;
    Drawer drawer = 37;
    TabBar tab_bar = 38;
    TabBarView tab_bar_view = 39;
    NavigationBar navigation_bar = 40;
    NavigationDestination navigation_destination = 41;
    ListTile list_tile = 42;
    InkWell ink_well = 43;
    GestureDetector gesture_detector = 44;
    SafeArea safe_area = 45;
    SingleChildScrollView single_child_scroll_view = 46;
    IfWidget if_widget = 47;
  }
}

// Widget implementations
message Scaffold {
  Widget app_bar = 1;
  Widget body = 2;
  Widget bottom_navigation_bar = 3;
}

message AppBar {
  Widget title = 1;
}

message Body {
  Widget content = 1;
  Widget button = 2;
}

message Text {
  string value = 1;
}

message TextFromState {
  interpreter.types.TValue value = 1;
}

message Button {
  Widget text = 1;
  interpreter.handlers.Handler handler = 2;
}

message Row {
  repeated Widget children_exprs = 1;
}

message Column {
  repeated Widget children_exprs = 1;
}

message ElevatedButton {
  Widget child = 1;
  interpreter.handlers.Handler on_pressed_handler = 2;
  interpreter.types.ButtonStyle style = 3;
}

// ============================================================================
// FLUTTER CORE WIDGETS
// ============================================================================

message Container {
  Widget child = 1;
  double width = 2;
  double height = 3;
  interpreter.types.EdgeInsets padding = 4;
  interpreter.types.EdgeInsets margin = 5;
  interpreter.types.Color color = 6;
  interpreter.types.BoxDecoration decoration = 7;
  interpreter.types.AlignmentGeometry alignment = 8;
}

message Padding {
  Widget child = 1;
  interpreter.types.EdgeInsets padding = 2;
}

message Center {
  Widget child = 1;
  double width_factor = 2;
  double height_factor = 3;
}

message ListView {
  repeated Widget children = 1;
  interpreter.types.Axis scroll_direction = 2;
  bool reverse = 3;
  interpreter.types.ScrollPhysics physics = 4;
  bool shrink_wrap = 5;
  interpreter.types.EdgeInsets padding = 6;
}

message GridView {
  repeated Widget children = 1;
  interpreter.types.SliverGridDelegate grid_delegate = 2;
  interpreter.types.Axis scroll_direction = 3;
  bool reverse = 4;
  interpreter.types.ScrollPhysics physics = 5;
  bool shrink_wrap = 6;
  interpreter.types.EdgeInsets padding = 7;
}

message Card {
  Widget child = 1;
  interpreter.types.Color color = 2;
  interpreter.types.Color shadow_color = 3;
  double elevation = 4;
  interpreter.types.ShapeBorder shape = 5;
  bool border_on_foreground = 6;
  interpreter.types.EdgeInsets margin = 7;
  interpreter.types.Clip clip_behavior = 8;
}

message FloatingActionButton {
  Widget child = 1;
  interpreter.handlers.Handler on_pressed = 2;
  string tooltip = 3;
  interpreter.types.Color foreground_color = 4;
  interpreter.types.Color background_color = 5;
  interpreter.types.Color focus_color = 6;
  interpreter.types.Color hover_color = 7;
  interpreter.types.Color splash_color = 8;
  double elevation = 9;
  double focus_elevation = 10;
  double hover_elevation = 11;
  double highlight_elevation = 12;
  double disabled_elevation = 13;
  bool mini = 14;
  interpreter.types.ShapeBorder shape = 15;
  interpreter.types.Clip clip_behavior = 16;
  bool auto_focus = 17;
}

message TextField {
  InputDecoration decoration = 1;
  string initial_value = 2;
  string placeholder = 3;
  bool obscure_text = 4;
  bool enabled = 5;
  bool read_only = 6;
  int32 max_lines = 7;
  int32 min_lines = 8;
  int32 max_length = 9;
  interpreter.types.TextInputType keyboard_type = 10;
  interpreter.types.TextInputAction text_input_action = 11;
  interpreter.types.TextCapitalization text_capitalization = 12;
  interpreter.types.TextAlign text_align = 13;
  interpreter.types.TextAlignVertical text_align_vertical = 14;
  interpreter.types.TextDirection text_direction = 15;
  bool auto_focus = 16;
  bool auto_correct = 17;
  bool enable_suggestions = 18;
  interpreter.handlers.Handler on_changed = 19;
  interpreter.handlers.Handler on_submitted = 20;
  interpreter.handlers.Handler on_editing_complete = 21;
  interpreter.handlers.Handler on_tap = 22;
}

message Image {
  string src = 1;
  double width = 2;
  double height = 3;
  interpreter.types.BoxFit fit = 4;
  interpreter.types.AlignmentGeometry alignment = 5;
  interpreter.types.ImageRepeat repeat = 6;
  interpreter.types.Color color = 7;
  interpreter.types.BlendMode color_blend_mode = 8;
  interpreter.types.FilterQuality filter_quality = 9;
  bool match_text_direction = 10;
  bool gapless_playback = 11;
  bool is_anti_alias = 12;
}

message Icon {
  interpreter.types.IconData icon_data = 1;
  double size = 2;
  interpreter.types.Color color = 3;
  string semantic_label = 4;
  interpreter.types.TextDirection text_direction = 5;
}

message Divider {
  double height = 1;
  double thickness = 2;
  double indent = 3;
  double end_indent = 4;
  interpreter.types.Color color = 5;
}

message SizedBox {
  Widget child = 1;
  double width = 2;
  double height = 3;
}

message Expanded {
  Widget child = 1;
  int32 flex = 2;
}

message Flexible {
  Widget child = 1;
  int32 flex = 2;
  interpreter.types.FlexFit fit = 3;
}

message Stack {
  repeated Widget children = 1;
  interpreter.types.AlignmentGeometry alignment = 2;
  interpreter.types.TextDirection text_direction = 3;
  interpreter.types.StackFit fit = 4;
  interpreter.types.Clip clip_behavior = 5;
}

message Positioned {
  Widget child = 1;
  double left = 2;
  double top = 3;
  double right = 4;
  double bottom = 5;
  double width = 6;
  double height = 7;
}

message Wrap {
  repeated Widget children = 1;
  interpreter.types.Axis direction = 2;
  interpreter.types.WrapAlignment alignment = 3;
  double spacing = 4;
  interpreter.types.WrapAlignment run_alignment = 5;
  double run_spacing = 6;
  interpreter.types.WrapCrossAlignment cross_axis_alignment = 7;
  interpreter.types.TextDirection text_direction = 8;
  interpreter.types.VerticalDirection vertical_direction = 9;
  interpreter.types.Clip clip_behavior = 10;
}

message Chip {
  Widget avatar = 1;
  Widget label = 2;
  interpreter.types.TextStyle label_style = 3;
  interpreter.types.EdgeInsets label_padding = 4;
  Widget delete_icon = 5;
  interpreter.handlers.Handler on_deleted = 6;
  interpreter.types.Color delete_icon_color = 7;
  string delete_button_tooltip_message = 8;
  interpreter.types.BorderSide side = 9;
  interpreter.types.OutlinedBorder shape = 10;
  interpreter.types.Clip clip_behavior = 11;
  interpreter.types.Color background_color = 12;
  interpreter.types.EdgeInsets padding = 13;
  interpreter.types.VisualDensity visual_density = 14;
  interpreter.types.MaterialTapTargetSize material_tap_target_size = 15;
  double elevation = 16;
  interpreter.types.Color shadow_color = 17;
  interpreter.types.Color surface_tint_color = 18;
  interpreter.types.Color selected_color = 19;
  interpreter.types.Color checkmark_color = 20;
  interpreter.types.Color disabled_color = 21;
  bool selected = 22;
  bool show_checkmark = 23;
  bool is_enabled = 24;
  bool auto_focus = 25;
  interpreter.handlers.Handler on_selected = 26;
}

message Switch {
  bool value = 1;
  interpreter.handlers.Handler on_changed = 2;
  interpreter.types.Color active_color = 3;
  interpreter.types.Color active_track_color = 4;
  interpreter.types.Color inactive_thumb_color = 5;
  interpreter.types.Color inactive_track_color = 6;
  interpreter.types.ImageProvider active_thumb_image = 7;
  interpreter.handlers.Handler on_active_thumb_image_error = 8;
  interpreter.types.ImageProvider inactive_thumb_image = 9;
  interpreter.handlers.Handler on_inactive_thumb_image_error = 10;
  interpreter.types.Color thumb_color = 11;
  interpreter.types.Color track_color = 12;
  interpreter.types.MaterialStateProperty track_outline_color = 13;
  interpreter.types.MaterialStateProperty track_outline_width = 14;
  interpreter.types.MaterialStateProperty thumb_icon = 15;
  interpreter.types.MaterialTapTargetSize material_tap_target_size = 16;
  interpreter.types.DragStartBehavior drag_start_behavior = 17;
  interpreter.types.Color focus_color = 18;
  interpreter.types.Color hover_color = 19;
  interpreter.types.Color overlay_color = 20;
  double splash_radius = 21;
  bool auto_focus = 22;
}

message Checkbox {
  bool value = 1;
  bool tristate = 2;
  interpreter.handlers.Handler on_changed = 3;
  interpreter.types.Color active_color = 4;
  interpreter.types.MaterialStateProperty fill_color = 5;
  interpreter.types.Color checkmark_color = 6;
  interpreter.types.Color focus_color = 7;
  interpreter.types.Color hover_color = 8;
  interpreter.types.MaterialStateProperty overlay_color = 9;
  double splash_radius = 10;
  interpreter.types.MaterialTapTargetSize material_tap_target_size = 11;
  interpreter.types.VisualDensity visual_density = 12;
  bool auto_focus = 13;
  interpreter.types.OutlinedBorder shape = 14;
  interpreter.types.BorderSide side = 15;
  bool is_error = 16;
  string semantic_label = 17;
}

message Radio {
  interpreter.types.TValue value = 1;
  interpreter.types.TValue group_value = 2;
  interpreter.handlers.Handler on_changed = 3;
  bool toggle_able = 4;
  interpreter.types.Color active_color = 5;
  interpreter.types.MaterialStateProperty fill_color = 6;
  interpreter.types.Color focus_color = 7;
  interpreter.types.Color hover_color = 8;
  interpreter.types.MaterialStateProperty overlay_color = 9;
  double splash_radius = 10;
  interpreter.types.MaterialTapTargetSize material_tap_target_size = 11;
  interpreter.types.VisualDensity visual_density = 12;
  bool auto_focus = 13;
}

message Slider {
  double value = 1;
  interpreter.handlers.Handler on_changed = 2;
  interpreter.handlers.Handler on_change_start = 3;
  interpreter.handlers.Handler on_change_end = 4;
  double min = 5;
  double max = 6;
  int32 divisions = 7;
  string label = 8;
  interpreter.types.Color active_color = 9;
  interpreter.types.Color inactive_color = 10;
  interpreter.types.Color thumb_color = 11;
  interpreter.types.Color overlay_color = 12;
  double mouse_cursor = 13;
  string semantic_form_atter_callback = 14;
  interpreter.types.Color focus_color = 15;
  bool auto_focus = 16;
}

message LinearProgressIndicator {
  double value = 1;
  interpreter.types.Color background_color = 2;
  interpreter.types.Color color = 3;
  interpreter.types.Color value_color = 4;
  double min_height = 5;
  string semantic_label = 6;
  string semantic_value = 7;
}

message CircularProgressIndicator {
  double value = 1;
  interpreter.types.Color background_color = 2;
  interpreter.types.Color color = 3;
  interpreter.types.Color value_color = 4;
  double stroke_width = 5;
  double stroke_align = 6;
  string semantic_label = 7;
  string semantic_value = 8;
  interpreter.types.StrokeCap stroke_cap = 9;
}

message AlertDialog {
  Widget title = 1;
  interpreter.types.EdgeInsets title_padding = 2;
  interpreter.types.TextStyle title_text_style = 3;
  Widget content = 4;
  interpreter.types.EdgeInsets content_padding = 5;
  interpreter.types.TextStyle content_text_style = 6;
  repeated Widget actions = 7;
  interpreter.types.EdgeInsets actions_padding = 8;
  interpreter.types.MainAxisAlignment actions_alignment = 9;
  interpreter.types.OverflowBarAlignment actions_overflow_alignment = 10;
  interpreter.types.VerticalDirection actions_overflow_direction = 11;
  double actions_overflow_button_spacing = 12;
  interpreter.types.EdgeInsets button_padding = 13;
  interpreter.types.Color background_color = 14;
  interpreter.types.Color surface_tint_color = 15;
  double elevation = 16;
  interpreter.types.Color shadow_color = 17;
  interpreter.types.Color icon_color = 18;
  double icon_size = 19;
  interpreter.types.EdgeInsets inset_padding = 20;
  interpreter.types.Clip clip_behavior = 21;
  interpreter.types.ShapeBorder shape = 22;
  interpreter.types.AlignmentGeometry alignment = 23;
  bool scrollable = 24;
  string semantic_label = 25;
}

message BottomSheet {
  Widget child = 1;
  interpreter.types.Color background_color = 2;
  double elevation = 3;
  interpreter.types.ShapeBorder shape = 4;
  interpreter.types.Clip clip_behavior = 5;
  interpreter.types.BoxConstraints constraints = 6;
  interpreter.types.Color drag_handle_color = 7;
  interpreter.types.Size drag_handle_size = 8;
  bool show_drag_handle = 9;
  bool enable_drag = 10;
  interpreter.handlers.Handler on_closing = 11;
  interpreter.types.AnimationController animation_controller = 12;
}

message Drawer {
  Widget child = 1;
  interpreter.types.Color background_color = 2;
  double elevation = 3;
  interpreter.types.Color shadow_color = 4;
  interpreter.types.Color surface_tint_color = 5;
  interpreter.types.ShapeBorder shape = 6;
  double width = 7;
  string semantic_label = 8;
  interpreter.types.Clip clip_behavior = 9;
}

message TabBar {
  repeated Widget tabs = 1;
  interpreter.types.TabController controller = 2;
  bool is_scrollable = 3;
  interpreter.types.EdgeInsets padding = 4;
  interpreter.types.Color indicator_color = 5;
  bool automatic_indicator_color_adjustment = 6;
  double indicator_weight = 7;
  interpreter.types.EdgeInsets indicator_padding = 8;
  interpreter.types.Decoration indicator = 9;
  interpreter.types.TabBarIndicatorSize indicator_size = 10;
  interpreter.types.Color divider_color = 11;
  double divider_height = 12;
  interpreter.types.Color label_color = 13;
  interpreter.types.TextStyle label_style = 14;
  interpreter.types.EdgeInsets label_padding = 15;
  interpreter.types.Color unselected_label_color = 16;
  interpreter.types.TextStyle unselected_label_style = 17;
  interpreter.types.DragStartBehavior drag_start_behavior = 18;
  interpreter.types.MaterialStateProperty overlay_color = 19;
  interpreter.types.InteractiveInkFeatureFactory splash_factory = 20;
  double splash_border_radius = 21;
  interpreter.types.TabAlignment tab_alignment = 22;
  interpreter.types.TextScaler text_scaler = 23;
  interpreter.handlers.Handler on_tap = 24;
  interpreter.types.ScrollPhysics physics = 25;
}

message TabBarView {
  repeated Widget children = 1;
  interpreter.types.TabController controller = 2;
  interpreter.types.ScrollPhysics physics = 3;
  interpreter.types.DragStartBehavior drag_start_behavior = 4;
  double view_port_fraction = 5;
  interpreter.types.Clip clip_behavior = 6;
}

message NavigationBar {
  repeated Widget destinations = 1;
  int32 selected_index = 2;
  interpreter.handlers.Handler on_destination_selected = 3;
  double elevation = 4;
  interpreter.types.Color shadow_color = 5;
  interpreter.types.Color surface_tint_color = 6;
  interpreter.types.Color background_color = 7;
  interpreter.types.Color indicator_color = 8;
  interpreter.types.ShapeBorder indicator_shape = 9;
  double height = 10;
  interpreter.types.NavigationDestinationLabelBehavior label_behavior = 11;
  interpreter.types.OverlayVisibilityVariant overlay_color = 12;
}

message NavigationDestination {
  Widget icon = 1;
  Widget selected_icon = 2;
  string label = 3;
  string tooltip = 4;
  bool enabled = 5;
}

message ListTile {
  Widget leading = 1;
  Widget title = 2;
  Widget subtitle = 3;
  Widget trailing = 4;
  bool is_three_line = 5;
  bool dense = 6;
  interpreter.types.VisualDensity visual_density = 7;
  interpreter.types.ShapeBorder shape = 8;
  interpreter.types.ListTileStyle style = 9;
  interpreter.types.Color selected_color = 10;
  interpreter.types.Color icon_color = 11;
  interpreter.types.Color text_color = 12;
  interpreter.types.TextStyle title_text_style = 13;
  interpreter.types.TextStyle subtitle_text_style = 14;
  interpreter.types.TextStyle leading_and_trailing_text_style = 15;
  interpreter.types.EdgeInsets content_padding = 16;
  bool enabled = 17;
  interpreter.handlers.Handler on_tap = 18;
  interpreter.handlers.Handler on_long_press = 19;
  interpreter.handlers.Handler on_focus_change = 20;
  bool selected = 21;
  interpreter.types.Color focus_color = 22;
  interpreter.types.Color hover_color = 23;
  interpreter.types.Color splash_color = 24;
  interpreter.types.InteractiveInkFeatureFactory splash_factory = 25;
  bool enable_feedback = 26;
  double horizontal_title_gap = 27;
  double min_vertical_padding = 28;
  double min_leading_width = 29;
  interpreter.types.ListTileTitleAlignment title_alignment = 30;
}

message InkWell {
  Widget child = 1;
  interpreter.handlers.Handler on_tap = 2;
  interpreter.handlers.Handler on_double_tap = 3;
  interpreter.handlers.Handler on_long_press = 4;
  interpreter.handlers.Handler on_tap_down = 5;
  interpreter.handlers.Handler on_tap_up = 6;
  interpreter.handlers.Handler on_tap_cancel = 7;
  interpreter.handlers.Handler on_secondary_tap = 8;
  interpreter.handlers.Handler on_secondary_tap_up = 9;
  interpreter.handlers.Handler on_secondary_tap_down = 10;
  interpreter.handlers.Handler on_secondary_tap_cancel = 11;
  interpreter.handlers.Handler on_highlight_changed = 12;
  interpreter.handlers.Handler on_hover = 13;
  interpreter.types.Color focus_color = 14;
  interpreter.types.Color hover_color = 15;
  interpreter.types.Color highlight_color = 16;
  interpreter.types.MaterialStateProperty overlay_color = 17;
  interpreter.types.Color splash_color = 18;
  interpreter.types.InteractiveInkFeatureFactory splash_factory = 19;
  double radius = 20;
  interpreter.types.BorderRadius border_radius = 21;
  interpreter.types.ShapeBorder custom_border = 22;
  bool enable_feedback = 23;
  bool exclude_from_semantics = 24;
  interpreter.types.Color focus_color_2 = 25;
  bool can_request_focus = 26;
  interpreter.handlers.Handler on_focus_change = 27;
  bool auto_focus = 28;
  interpreter.types.MaterialStatesController states_controller = 29;
}

message GestureDetector {
  Widget child = 1;
  interpreter.handlers.Handler on_tap = 2;
  interpreter.handlers.Handler on_tap_up = 3;
  interpreter.handlers.Handler on_tap_down = 4;
  interpreter.handlers.Handler on_tap_cancel = 5;
  interpreter.handlers.Handler on_secondary_tap = 6;
  interpreter.handlers.Handler on_secondary_tap_up = 7;
  interpreter.handlers.Handler on_secondary_tap_down = 8;
  interpreter.handlers.Handler on_secondary_tap_cancel = 9;
  interpreter.handlers.Handler on_tertiary_tap_down = 10;
  interpreter.handlers.Handler on_tertiary_tap_up = 11;
  interpreter.handlers.Handler on_tertiary_tap_cancel = 12;
  interpreter.handlers.Handler on_double_tap_down = 13;
  interpreter.handlers.Handler on_double_tap = 14;
  interpreter.handlers.Handler on_double_tap_cancel = 15;
  interpreter.handlers.Handler on_long_press = 16;
  interpreter.handlers.Handler on_long_press_start = 17;
  interpreter.handlers.Handler on_long_press_move_update = 18;
  interpreter.handlers.Handler on_long_press_up = 19;
  interpreter.handlers.Handler on_long_press_end = 20;
  interpreter.handlers.Handler on_secondary_long_press = 21;
  interpreter.handlers.Handler on_secondary_long_press_start = 22;
  interpreter.handlers.Handler on_secondary_long_press_move_update = 23;
  interpreter.handlers.Handler on_secondary_long_press_up = 24;
  interpreter.handlers.Handler on_secondary_long_press_end = 25;
  interpreter.handlers.Handler on_tertiary_long_press_down = 26;
  interpreter.handlers.Handler on_tertiary_long_press_start = 27;
  interpreter.handlers.Handler on_tertiary_long_press_move_update = 28;
  interpreter.handlers.Handler on_tertiary_long_press_up = 29;
  interpreter.handlers.Handler on_tertiary_long_press_end = 30;
  interpreter.handlers.Handler on_vertical_drag_down = 31;
  interpreter.handlers.Handler on_vertical_drag_start = 32;
  interpreter.handlers.Handler on_vertical_drag_update = 33;
  interpreter.handlers.Handler on_vertical_drag_end = 34;
  interpreter.handlers.Handler on_vertical_drag_cancel = 35;
  interpreter.handlers.Handler on_horizontal_drag_down = 36;
  interpreter.handlers.Handler on_horizontal_drag_start = 37;
  interpreter.handlers.Handler on_horizontal_drag_update = 38;
  interpreter.handlers.Handler on_horizontal_drag_end = 39;
  interpreter.handlers.Handler on_horizontal_drag_cancel = 40;
  interpreter.handlers.Handler on_force_press_start = 41;
  interpreter.handlers.Handler on_force_press_peak = 42;
  interpreter.handlers.Handler on_force_press_update = 43;
  interpreter.handlers.Handler on_force_press_end = 44;
  interpreter.handlers.Handler on_pan_down = 45;
  interpreter.handlers.Handler on_pan_start = 46;
  interpreter.handlers.Handler on_pan_update = 47;
  interpreter.handlers.Handler on_pan_end = 48;
  interpreter.handlers.Handler on_pan_cancel = 49;
  interpreter.handlers.Handler on_scale_start = 50;
  interpreter.handlers.Handler on_scale_update = 51;
  interpreter.handlers.Handler on_scale_end = 52;
  interpreter.types.HitTestBehavior behavior = 53;
  bool exclude_from_semantics = 54;
  interpreter.types.DragStartBehavior drag_start_behavior = 55;
  interpreter.types.Set supported_devices = 56;
}

message SafeArea {
  Widget child = 1;
  bool left = 2;
  bool top = 3;
  bool right = 4;
  bool bottom = 5;
  interpreter.types.EdgeInsets minimum = 6;
  bool maintain_bottom_view_padding = 7;
}

message SingleChildScrollView {
  Widget child = 1;
  interpreter.types.Axis scroll_direction = 2;
  bool reverse = 3;
  interpreter.types.EdgeInsets padding = 4;
  bool primary = 5;
  interpreter.types.ScrollPhysics physics = 6;
  interpreter.types.ScrollController controller = 7;
  interpreter.types.DragStartBehavior drag_start_behavior = 8;
  interpreter.types.Clip clip_behavior = 9;
  string restoration_id = 10;
  interpreter.types.ScrollViewKeyboardDismissBehavior keyboard_dismiss_behavior = 11;
}

message InputDecoration {
    string hint_text = 1;
    Widget prefix_icon = 2;
    string label_text = 3;
    string prefix_text = 4;
    string suffix_text = 5;
    string helper_text = 6;
    string error_text = 7;
    bool is_dense = 8;
    interpreter.types.EdgeInsetsGeometry padding = 9;
    interpreter.types.EdgeInsetsGeometry margin = 10;
    double enabled_border_width = 11;
    double focused_border_width = 12;
    double disabled_border_width = 13;
}

//=================== flows ============

message IfWidget {
    bool condition = 1;
    Widget then = 2;
    Widget else = 3;
}
